--- a/MachRewardsApp/package.json
+++ b/MachRewardsApp/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-firebase/app": "^17.3.0",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +29,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
