--- a/MachRewardsApp/package.json
+++ b/MachRewardsApp/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^17.3.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-svg": "^13.8.0"
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
