Added plugin install commands

--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -27,3 +27,7 @@ jobs:
         npm init
         npm install
         gulp
+        npm install @react-navigation/native
+        npm install react-native-screens
+        npm install react-native-safe-area-context
+        npm install react-navigation
