--- a/Mach_Rewards_Expo/package.json
+++ b/Mach_Rewards_Expo/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-native": "0.71.3",
     "react-native-dropdown-picker": "^5.4.5",
     "react-native-safe-area-context": "4.5.0",
