--- a/Mach_Rewards_Expo/app.json
+++ b/Mach_Rewards_Expo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Mach_Rewards_Expo",
-    "slug": "Mach_Rewards_Expo",
+    "slug": "mach-rewards",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,10 +21,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.machrewards.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "34890593-51ca-4b63-88e5-42a1d1ea76a3"
+      }
+    },
+    "owner": "grayturtlejoey"
   }
 }
