--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -20,6 +20,6 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Build on EAS
         run: eas build --platform all --non-interactive
