android only for now

--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install dependencies
         run: npm i
       - name: Build on EAS
-        run: eas build --platform all --non-interactive
+        run: eas build --platform android --non-interactive
