--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,9 +1,9 @@
 name: update
-on: 
+on:
+  workflow_dispatch:
   push:
-    branches: [main]
-  pull_request:
-    types: [opened, synchronize]
+    branches:
+      - main
 
 
 jobs:
